# reelrack

./: .gitignore  LICENSE  README.md
reelrack-fw/: CMakeLists.txt  README.md  csv_test.csv  partitions_example.csv  sdkconfig  sdkconfig.old
reelrack-fw/main/: CMakeLists.txt  db.c  db.h  esp_rest_main.c  main.c  rest_server.c  rgb.c  rgb.h
reelrack-fw/main/website/: index.html  script.js  style.css
reelrack-fw/website/: index.html  script.js  style.css
